packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_not_transform_events_on_non_elements.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 4807
expression: output
---
==INPUT==


import { component$, $ } from '@qwik.dev/core';
import { CustomComponent } from './custom-component';
import { AnotherComponent } from './another-component';

export const Greeter = component$(() => {
	return (
		<div>
			<CustomComponent onClick$={() => {}}/>
			{array.map(item => (
				<AnotherComponent onClick$={() => {}}/>
			))}
		</div>
	)
});


============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_Greeter_component_n7HuG2hhU0Q = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q");
//
export const Greeter = /*#__PURE__*/ componentQrl(_qrl_Greeter_component_n7HuG2hhU0Q);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAKA,OAAO,MAAM,wBAAU,iDASpB\"}")
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { _noopQrl } from "@qwik.dev/core";
import { AnotherComponent } from "./another-component";
import { CustomComponent } from "./custom-component";
//
const _qrl_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA = /*#__PURE__*/ _noopQrl("Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA");
const _qrl_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w = /*#__PURE__*/ _noopQrl("Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w");
//
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    return <div>
			<CustomComponent onClick$={_qrl_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w}/>
			{array.map((item)=><AnotherComponent onClick$={_qrl_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA}/>)}
		</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;6CAKkC;IACjC,QACE,IAAI;GACJ,CAAC,gBAAgB,2EAAqB;GACtC,CAAC,MAAM,GAAG,CAAC,CAAA,QACT,iBAAiB,8EAChB;EACJ,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    195,
    351
  ]
}
*/
== DIAGNOSTICS ==

[]
