packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_output_utils_in_a_newly_generated_segment.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 92
expression: output
---
==INPUT==


export const testLogger = () => {
  console.log("testLogger");
};

============================= test.js ==

export const testLogger = ()=>{
    console.log("testLogger");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA,OAAO,MAAM,aAAa;IACxB,QAAQ,GAAG,CAAC;AACd,EAAE\"}")
== DIAGNOSTICS ==

[]
